--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
@@ -46,7 +46,7 @@
       "recentProducts": "umb://document/1435f4ed51a2467c9860d2b9e8092854",
       "heading": "Recently Added ",
       "introduction": "",
-      "productCategory": "umb://document/2a48aecf7d0745fea4f113bd5144342a",
+      "productCategory": null,
       "maximumItems": "9"
     }
   ],
